# read_buffer

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: read_file.rs  read_first_line.rs  some_text.txt
src/: dyn_read_buffer.rs  lib.rs  read_buffer.rs
tests/: capacity.rs  read_bytes.rs  read_from.rs  read_until.rs  read_while.rs  tests.rs
tests/utils/: chunked_reader.rs  error_reader.rs  mod.rs
