[package]
name = "read_buffer"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/dav-wolff/read_buffer"
license = "MIT"
authors = ["David Wolff"]
description = "This crate provides ReadBuffer, a wrapper to safely read into a buffer from a Read."
keywords = ["read", "bytes", "buffer"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]